force-app/main/default/objects/Eval_Request__c/fields/Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date__c</fullName>
    <label>Ship Date</label>
    <summarizedField>Eval_Unit_Details__c.Ship_Date__c</summarizedField>
    <summaryForeignKey>Eval_Unit_Details__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>