force-app/main/default/objects/Eval_Request__c/fields/Ship_Method__c.field-meta.xml
<CustomField>
    <fullName>Ship_Method__c</fullName>
    <label>Ship Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Will Call</fullName>
            </value>
            <value>
                <fullName>Transfer Eval from Previous Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>