force-app/main/default/objects/Eval_Request__c/fields/shipmethod__c.field-meta.xml
<CustomField>
    <fullName>shipmethod__c</fullName>
    <formula>text(Ship_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>shipmethod</label>
    <type>Text</type>
</CustomField>