force-app/main/default/objects/Eval_Request__c/fields/Shipping_Account_Name_del__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account_Name_del__c</fullName>
    <formula>Shipping_Contact_Name__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Account Name</label>
    <type>Text</type>
</CustomField>