force-app/main/default/objects/Eval_Request__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>Shipping_Contact_Name__r.Account.Name  &amp;&apos; &apos;&amp;Shipping_Contact_Name__r.Phone&amp;&apos; &apos;&amp;Shipping_Contact_Name__r.Email&amp;&apos; &apos;&amp;
 Shipping_Contact_Name__r.MailingStreet &amp;&apos; &apos;&amp;Shipping_Contact_Name__r.MailingCity&amp;&apos;  &apos;&amp;Shipping_Contact_Name__r.MailingState&amp;&apos; &apos;&amp;Shipping_Contact_Name__r.MailingPostalCode&amp;&apos; &apos;&amp;Shipping_Contact_Name__r.MailingCountry</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>