force-app/main/default/objects/Eval_Request__c/fields/Shipping_Billing_Exist__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Billing_Exist__c</fullName>
    <formula>if(and(Billing_Contact_Name__c &lt;&gt; null,Shipping_Contact_Name__c  &lt;&gt; null )= true, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping &amp; Billing Exist</label>
    <type>Checkbox</type>
</CustomField>