force-app/main/default/objects/Eval_Request__c/fields/Shipping_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Eval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>