force-app/main/default/objects/Eval_Request__c/fields/SHIPPING_CONTACT_NAME_ORACLE__c.field-meta.xml
<CustomField>
    <fullName>SHIPPING_CONTACT_NAME_ORACLE__c</fullName>
    <formula>if( text(Eval_Type__c ) == &apos;ViewSonic Sales Rep Eval&apos;, 
Owner:User.FirstName+&apos; &apos;+Owner:User.LastName,   Shipping_Contact_Name__r.FirstName+&apos; &apos;+Shipping_Contact_Name__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SHIPPING_CONTACT_NAME_ORACLE</label>
    <type>Text</type>
</CustomField>