force-app/main/default/objects/Eval_Request__c/fields/SHIPPING_CONTACT_PHONE__c.field-meta.xml
<CustomField>
    <fullName>SHIPPING_CONTACT_PHONE__c</fullName>
    <formula>if( text(Eval_Type__c ) == &apos;ViewSonic Sales Rep Eval&apos;, 
Owner:User.Phone,   Shipping_Contact_Name__r.Phone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SHIPPING_CONTACT_PHONE</label>
    <type>Text</type>
</CustomField>