force-app/main/default/objects/Eval_Request__c/fields/Shipping_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip__c</fullName>
    <label>Shipping Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>