force-app/main/default/objects/Eval_Request__c/fields/ShippingAccount__c.field-meta.xml
<CustomField>
    <fullName>ShippingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShippingAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Eval Requests (ShippingAccount)</relationshipLabel>
    <relationshipName>Eval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>