force-app/main/default/objects/Eval_Request__c/fields/shippingAddressCompleted__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>shippingAddressCompleted</label>
    <type>Checkbox</type>
</CustomField>