force-app/main/default/objects/Eval_Request__c/fields/Special_Approval__c.field-meta.xml
<CustomField>
    <fullName>Special_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is updated using declarative methods and determines if eval is routed for special approval when the product is determined to be special approval</description>
    <label>Special Approval</label>
    <type>Checkbox</type>
</CustomField>