force-app/main/default/objects/Eval_Request__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <label>Shipping Instructions (No Addresses)</label>
    <type>TextArea</type>
</CustomField>