force-app/main/default/objects/Eval_Request__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eval Type Selection</fullName>
                <default>true</default>
                <label>Eval Type Selection</label>
            </value>
            <value>
                <fullName>Write off Request</fullName>
            </value>
            <value>
                <fullName>Reason For Write Off</fullName>
            </value>
            <value>
                <fullName>Approval Request</fullName>
            </value>
            <value>
                <fullName>Written-Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>