force-app/main/default/objects/Eval_Request__c/fields/Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Template_ID__c</fullName>
    <formula>if(No_Credit_Card_Eval_Agreement__c = false, &apos;a0p12000003RWZB&apos;,&apos;a0p12000003RWYG&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template ID</label>
    <type>Text</type>
</CustomField>