force-app/main/default/objects/Eval_Request__c/fields/Total_Eval_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Eval_Cost__c</fullName>
    <formula>(Product_Name__r.Evaluation_Price__c * Quantity__c )+
( Product_Name_2__r.Evaluation_Price__c * Quantity_2__c )+
( Product_Name_3__r.Evaluation_Price__c * Quantity_3__c )+
( Product_Name_4__r.Evaluation_Price__c * Quantity_4__c)+
( Product_Name_5__r.Evaluation_Price__c * Quantity_5__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Eval Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>