force-app/main/default/objects/Eval_Request__c/fields/Total_Evaluations__c.field-meta.xml
<CustomField>
    <fullName>Total_Evaluations__c</fullName>
    <inlineHelpText>All evaluations that have been requested regardless if they have been returned or are past due.</inlineHelpText>
    <label>Total Evaluations</label>
    <summarizedField>Eval_Unit_Details__c.Evaluation_Price_Text__c</summarizedField>
    <summaryForeignKey>Eval_Unit_Details__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>