force-app/main/default/objects/Eval_Request__c/fields/Total_Past_Due_Evals__c.field-meta.xml
<CustomField>
    <fullName>Total_Past_Due_Evals__c</fullName>
    <label>Total Past Due Evals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>