force-app/main/default/objects/Eval_Request__c/fields/Trade_Show__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade Show</label>
    <type>Checkbox</type>
</CustomField>