force-app/main/default/objects/Eval_Request__c/fields/Trade_Show_Expected_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show_Expected_Return_Date__c</fullName>
    <label>Trade Show Expected Return Date</label>
    <type>Date</type>
</CustomField>