force-app/main/default/objects/Eval_Request__c/fields/Trade_Show_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show_Shipping_Address__c</fullName>
    <inlineHelpText>Address that product needs to be shipped to. For Trade shows only.</inlineHelpText>
    <label>Trade Show Shipping Address</label>
    <type>TextArea</type>
</CustomField>