force-app/main/default/objects/Eval_Request__c/fields/Trade_Show_Shipping_Phone__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show_Shipping_Phone__c</fullName>
    <inlineHelpText>May not be necessary, but a phone number to call if using the trade show docks.</inlineHelpText>
    <label>Trade Show Shipping Phone</label>
    <type>Phone</type>
</CustomField>