force-app/main/default/objects/Eval_Request__c/fields/Transfer_Approved__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Approved</label>
    <type>Checkbox</type>
</CustomField>