force-app/main/default/objects/Eval_Request__c/fields/Transfer_Request__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Request</label>
    <type>Checkbox</type>
</CustomField>