force-app/main/default/objects/Eval_Request__c/fields/Units_that_are_still_outstanding__c.field-meta.xml
<CustomField>
    <fullName>Units_that_are_still_outstanding__c</fullName>
    <label>Units that are still outstanding</label>
    <summaryFilterItems>
        <field>Eval_Unit_Details__c.Status__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Eval_Unit_Details__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>