force-app/main/default/objects/Eval_Request__c/fields/VP_Special__c.field-meta.xml
<CustomField>
    <fullName>VP_Special__c</fullName>
    <formula>contains( Products__c, &apos;CDE7&apos;) ||
contains( Products__c, &apos;CDE8&apos;) ||
contains( Products__c, &apos;CDE9&apos;) ||
contains( Products__c, &apos;CDP9&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VP Special</label>
    <type>Checkbox</type>
</CustomField>