force-app/main/default/objects/Eval_Request__c/fields/Will_this_be_for_a_Trade_Show__c.field-meta.xml
<CustomField>
    <fullName>Will_this_be_for_a_Trade_Show__c</fullName>
    <inlineHelpText>If this eval is being used for a trade show, then check this box. You will need to add all trade show information.</inlineHelpText>
    <label>Will this be for a Trade Show?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No. Not for trade show</fullName>
                <default>true</default>
                <label>No. Not for trade show</label>
            </value>
            <value>
                <fullName>Yes. Trade Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>