force-app/main/default/objects/Eval_Request__c/fields/Write_Off_DateRU__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_DateRU__c</fullName>
    <description>Rolled up for reporting</description>
    <label>Write Off Date ru</label>
    <summarizedField>Eval_Unit_Details__c.Write_Off_Date__c</summarizedField>
    <summaryForeignKey>Eval_Unit_Details__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>