force-app/main/default/objects/Eval_Request__c/fields/Write_Off_Reason__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Reason__c</fullName>
    <label>Write Off Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>