force-app/main/default/objects/Eval_Request__c/fields/Write_off_Reason_Complete__c.field-meta.xml
<CustomField>
    <fullName>Write_off_Reason_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Write off Reason Complete</label>
    <type>Checkbox</type>
</CustomField>