force-app/main/default/objects/Eval_Request__c/fields/Write_Off_Response__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Response__c</fullName>
    <label>Write Off Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>