force-app/main/default/objects/Eval_Request__c/fields/Write_Offs_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Write_Offs_Last_12_Months__c</fullName>
    <label>Eval Write Offs</label>
    <summarizedField>Eval_Unit_Details__c.Evaluation_Price_Text__c</summarizedField>
    <summaryFilterItems>
        <field>Eval_Unit_Details__c.Status__c</field>
        <operation>equals</operation>
        <value>Write-off</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Eval_Unit_Details__c.Write_Off_Date__c</field>
        <operation>greaterThan</operation>
        <value>2/1/2015</value>
    </summaryFilterItems>
    <summaryForeignKey>Eval_Unit_Details__c.Eval_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>