force-app/main/default/objects/Eval_Request__c/fields/X2_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>X2_Business_Days__c</fullName>
    <formula>CASE( 
MOD( today()- DATE(1900, 1, 7), 7), 
0, datetimevalue(today()) + 1 +(18/24), /*if Today is Sun,today+1=Monday */ 
1, datetimevalue(today()) + 1 +(18/24), /*if Today is Mon,today+1=Tuesday */ 
2, datetimevalue(today()) + 1 +(18/24), /*if Today is Tues,today+1=Wednesday */ 
3, datetimevalue(today()) + 1 +(18/24), /*if Today is Wed,today+1=Thursday*/ 
4, datetimevalue(today()) + 1 +(18/24), /*if Today is Thurs,today+1=Friday */ 
5,datetimevalue(today()) + 4 +(18/24), /*if Today is Fri,today+4=Monday next week */ 
6,datetimevalue(today()) + 3 +(18/24), /*if Today is Sat,today+3=Monday next week */ 
datetimevalue(today()) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2 Business Days</label>
    <type>Date</type>
</CustomField>