force-app/main/default/objects/Eval_Request__c/recordTypes/Create_Trade_Show.recordType-meta.xml
<RecordType>
    <fullName>Create_Trade_Show</fullName>
    <active>true</active>
    <description>Trade Show requirement. for sales rep type not end user</description>
    <label>Create Trade Show vs</label>
</RecordType>