force-app/main/default/objects/Eval_Request__c/recordTypes/Create_Trade_Show_eu.recordType-meta.xml
<RecordType>
    <fullName>Create_Trade_Show_eu</fullName>
    <active>true</active>
    <description>Trade Show creation for end user</description>
    <label>Create Trade Show eu</label>
</RecordType>