force-app/main/default/objects/Eval_Request__c/recordTypes/End_User_Selection.recordType-meta.xml
<RecordType>
    <fullName>End_User_Selection</fullName>
    <active>true</active>
    <label>Create End User</label>
</RecordType>