force-app/main/default/objects/Eval_Request__c/recordTypes/Reseller_Demo_Selection.recordType-meta.xml
<RecordType>
    <fullName>Reseller_Demo_Selection</fullName>
    <active>true</active>
    <label>Create Reseller Demo</label>
</RecordType>