force-app/main/default/objects/Eval_Request__c/recordTypes/Sale_Rep_Eval_Selection.recordType-meta.xml
<RecordType>
    <fullName>Sale_Rep_Eval_Selection</fullName>
    <active>true</active>
    <label>Create Sale Rep Eval</label>
</RecordType>