force-app/main/default/objects/Eval_Request__c/recordTypes/Write_Off_Selection.recordType-meta.xml
<RecordType>
    <fullName>Write_Off_Selection</fullName>
    <active>true</active>
    <label>Create Write Off</label>
</RecordType>