force-app/main/default/objects/Eval_Request__c/validationRules/Credit_Card_Waiver.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Card_Waiver</fullName>
    <active>true</active>
    <description>Requires reason for credit card waiver</description>
    <errorConditionFormula>(No_Credit_Card_Eval_Agreement__c = true || 
 No_Credit_Card_Eval_Agreement__c  = true)

 &amp;&amp;  isblank(Reason_for_No_Credit_Card__c )&amp;&amp;  $Organization.Id = &apos;00D7d0000077lG5&apos;</errorConditionFormula>
    <errorMessage>To waive credit card or to waive agreement, you must have a reason entered in system.</errorMessage>
</ValidationRule>