force-app/main/default/objects/Eval_Request__c/validationRules/GovEdWaiver.validationRule-meta.xml
<ValidationRule>
    <fullName>GovEdWaiver</fullName>
    <active>true</active>
    <description>Request Agreement Waiver or CC Wavier, not both. This is needed for proper approval process routing</description>
    <errorConditionFormula>isnew() &amp;&amp;  GovEd_Account_Waive_Agreement__c = true &amp;&amp;  No_Credit_Card_Eval_Agreement__c = true&amp;&amp;  $Organization.Id = &apos;00D7d0000077lG5&apos;</errorConditionFormula>
    <errorMessage>Please select one. Waive Credit Card or Waive Agreement. If there is no agreement, then there will be no credit card. This is needed for proper approval process routing. Thank You</errorMessage>
</ValidationRule>