force-app/main/default/objects/Eval_Request__c/validationRules/Product_Name_5_is_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Name_5_is_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND((not(isblank(Product_Name_5__c))),(OR(ISBLANK(Quantity_5__c),isnull(Quantity_5__c))))</errorConditionFormula>
    <errorDisplayField>Quantity_5__c</errorDisplayField>
    <errorMessage>Input quantity because there is a product</errorMessage>
</ValidationRule>