force-app/main/default/objects/Eval_Request__c/validationRules/Quantity_2_is_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_2_is_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND((or(isblank(Product_Name_2__c),isnull(Product_Name_2__c))),(OR(not(ISBLANK(Quantity_2__c)),not(isnull(Quantity_2__c)))))</errorConditionFormula>
    <errorDisplayField>Product_Name_2__c</errorDisplayField>
    <errorMessage>Input product because there is a value in Quantity</errorMessage>
</ValidationRule>