force-app/main/default/objects/Eval_Request__c/validationRules/Quantity_4_is_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_4_is_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND((or(isblank(Product_Name_4__c),isnull(Product_Name_4__c))),(OR(not(ISBLANK(Quantity_4__c)),not(isnull(Quantity_4__c)))))</errorConditionFormula>
    <errorDisplayField>Product_Name_4__c</errorDisplayField>
    <errorMessage>Input product because there is a value in Quantity</errorMessage>
</ValidationRule>