force-app/main/default/objects/Eval_Request__c/validationRules/Ship_Method_Equals_None.validationRule-meta.xml
<ValidationRule>
    <fullName>Ship_Method_Equals_None</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Ship_Method__c, &quot;--None--&quot;)</errorConditionFormula>
    <errorDisplayField>Ship_Method__c</errorDisplayField>
    <errorMessage>Select Ship Method</errorMessage>
</ValidationRule>