force-app/main/default/objects/Eval_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Eval_Process_Stage__c</columns>
    <columns>Opportunity_Name_f__c</columns>
    <columns>Products__c</columns>
    <columns>Shipping_Contact_Name__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Eval_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
    </filters>
    <label>3B -  All My Product Requests</label>
    <language>en_US</language>
</ListView>