force-app/main/default/objects/Eval_Request__c/listViews/Evals_Shipped_Last_2_Day.listView-meta.xml
<ListView>
    <fullName>Evals_Shipped_Last_2_Day</fullName>
    <columns>Evaluation__c</columns>
    <columns>Ship_Date__c</columns>
    <columns>Owner_and_User__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ship_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>Owner_and_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>3A - Evals Shipped Last 7 Day</label>
    <language>en_US</language>
</ListView>