force-app/main/default/objects/Eval_Request__c/listViews/My_Outstanding_Evaluations.listView-meta.xml
<ListView>
    <fullName>My_Outstanding_Evaluations</fullName>
    <columns>NAME</columns>
    <columns>Eval_Type__c</columns>
    <columns>Eval_Status_Comments__c</columns>
    <columns>Days_Outstanding__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Products__c</columns>
    <columns>Shipping_Account_Name_del__c</columns>
    <columns>Evaluations_Outstanding__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Evaluations_Outstanding__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Written-Off</value>
    </filters>
    <filters>
        <field>Product_Status__c</field>
        <operation>notEqual</operation>
        <value>Returned/Purchased,Written Off,Closed</value>
    </filters>
    <label>1A - My Outstanding Evaluations</label>
    <language>en_US</language>
</ListView>