force-app/main/default/objects/Eval_Request__c/listViews/My_Past_Due_Evaluations.listView-meta.xml
<ListView>
    <fullName>My_Past_Due_Evaluations</fullName>
    <columns>NAME</columns>
    <columns>Eval_Type__c</columns>
    <columns>Eval_Status_Comments__c</columns>
    <columns>Days_Outstanding__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Products__c</columns>
    <columns>Shipping_Account_Name_del__c</columns>
    <columns>Evaluations_Outstanding__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Days_Outstanding__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Product_Status__c</field>
        <operation>notEqual</operation>
        <value>Returned/Purchased,Written Off,Closed</value>
    </filters>
    <filters>
        <field>Eval_Type__c</field>
        <operation>equals</operation>
        <value>End-User/Reseller/Disty Eval,Reseller Demo</value>
    </filters>
    <filters>
        <field>Eval_Process_Stage__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>1B - My Past Due Evaluations</label>
    <language>en_US</language>
</ListView>